src/objects/Usage_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usage Tracking</relationshipLabel>
        <relationshipName>Usage_Tracking</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Version__c</fullName>
        <label>App Version</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Operating_System__c</fullName>
        <label>Device Operating System</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Mobile</fullName>
                </value>
                <value>
                <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Unique_ID__c</fullName>
        <label>Device Unique ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Accessed_Date__c</fullName>
        <label>First Accessed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Accessed_Date__c</fullName>
        <label>Last Accessed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TalendUpsertKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used as the key for data upsert by Talend</description>
        <externalId>true</externalId>
        <label>TalendUpsertKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Usage Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UT-{0000000}</displayFormat>
        <label>Usage Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>